--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 spring.datasource.driverClassName=org.postgresql.Driver
 db.name=shareit
 spring.datasource.url=jdbc:postgresql://localhost:5432/${db.name}
-spring.datasource.username=shareit
-spring.datasource.password=password
+spring.datasource.username=postgres
+spring.datasource.password=iamroot
