--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
                 <version>5.0.0</version>
                 <scope>test</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <version>7.7.0</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
